<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="35dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="30dp"
        android:hint="@string/user_hint"
        android:theme="@style/LoginEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <EditText
        android:id="@+id/edUserPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:theme="@style/LoginEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUserName" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/log_in"
        android:textColor="@color/black_a6"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/shape_radius_25_d8d8d8"
        app:layout_constraintTop_toBottomOf="@+id/edUserPassword"
        app:layout_constraintLeft_toLeftOf="@+id/edUserPassword"
        app:layout_constraintRight_toRightOf="@+id/edUserPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>